[tool.poetry]
name = "llm-cv-xp-generator"
version = "0.1.0"
description = ""
authors = ["Ícaro Abreu <oicaroabreu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
litellm = "^1.12.2"
streamlit = "^1.29.0"
google-generativeai = "^0.3.2"
streamlit-tags = "^1.2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
